crates/pv-release/tests/snapshots/app_publication__stage_app_publication_rejects_candidate_older_than_current_stable_installer.snap
---
source: crates/pv-release/tests/app_publication.rs
expression: "command_failure(&output, fixture.root())"
---
CommandFailure {
    status_code: Some(
        1,
    ),
    stdout: "",
    stderr: "Error: failed to stage app publication\n\nCaused by:\n    invalid publication input `<tempdir>/candidate-records/pv-darwin-amd64.json`: candidate app version `0.2.0` must not be older than current stable installer `0.3.0`\n",
}
