crates/pv-release/tests/snapshots/app_publication__stage_app_publication_rejects_corrupt_helper_before_write.snap
---
source: crates/pv-release/tests/app_publication.rs
expression: "command_failure(&output, fixture.root())"
---
CommandFailure {
    status_code: Some(
        1,
    ),
    stdout: "",
    stderr: "Error: failed to stage app publication\n\nCaused by:\n    artifact file `<tempdir>/source-binaries/pv/0.2.0/pv-helper-1.0.0-darwin-amd64` size mismatch: expected 9, got 14\n",
}
