crates/pv-release/tests/snapshots/app_publication__stage_app_publication_rejects_equal_version_app_asset_change.snap
---
source: crates/pv-release/tests/app_publication.rs
expression: "command_failure(&output, fixture.root())"
---
CommandFailure {
    status_code: Some(
        1,
    ),
    stdout: "",
    stderr: "Error: failed to stage app publication\n\nCaused by:\n    invalid publication input `<tempdir>/candidate-records/pv-darwin-arm64.json`: equal-version app publication must preserve the current darwin-arm64 app asset\n",
}
